compiler/typ/tests/fixtures/diagnostics/0201_adt_record_pattern_annotation_mismatch_07.ml
type rec_eta = { index : int; seen : bool }
let { index = (eta : bool); seen = other_eta } =
  { index = 6; seen = true }
